fix: Fixed desktop layout

--- a/index.html
+++ b/index.html
@@ -97,200 +97,202 @@
 					<p>Plus de 500 logements sont disponibles dans cette ville</p>
 				</div>
 			</section>
-			<section id="popular-lodging">
-				<div>
-					<h2>Les plus populaires</h2>
-					<i class="fa fa-chart-line"></i>
-				</div>
-				<div>
-					<a class="card-link" href="#">
-						<article class="card card-horizontal">
-							<picture class="card-thumbnail">
-								<img alt="Popular lodging photography"
-								     src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-								     srcset="images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 2x" />
-							</picture>
-							<div class="card-container">
-								<span class="card-title">Hôtel Le soleil du matin</span>
-								<small>Nuit à partir de <b>128€</b></small>
-								<div class="rating">
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
+			<div id="first-row">
+				<section id="popular-lodging">
+					<div>
+						<h2>Les plus populaires</h2>
+						<i class="fa fa-chart-line"></i>
+					</div>
+					<div id="popular-lodging-cards">
+						<a class="card-link" href="#">
+							<article class="card card-horizontal">
+								<picture class="card-thumbnail">
+									<img alt="Popular lodging photography"
+									     src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+									     srcset="images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 2x" />
+								</picture>
+								<div class="card-container">
+									<span class="card-title">Hôtel Le soleil du matin</span>
+									<small>Nuit à partir de <b>128€</b></small>
+									<div class="rating">
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+									</div>
 								</div>
-							</div>
-						</article>
-					</a>
-					<a class="card-link" href="#">
-						<article class="card card-horizontal">
-							<picture class="card-thumbnail">
-								<img alt="Popular lodging photography"
-								     src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
-								     srcset="images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg 2x" />
-							</picture>
-							<div class="card-container">
-								<span class="card-title">Au cœur de l'eau Chambres d'hôtes</span>
-								<small>Nuit à partir de <b>71€</b></small>
-								<div class="rating">
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star"></i>
+							</article>
+						</a>
+						<a class="card-link" href="#">
+							<article class="card card-horizontal">
+								<picture class="card-thumbnail">
+									<img alt="Popular lodging photography"
+									     src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+									     srcset="images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg 2x" />
+								</picture>
+								<div class="card-container">
+									<span class="card-title">Au cœur de l'eau Chambres d'hôtes</span>
+									<small>Nuit à partir de <b>71€</b></small>
+									<div class="rating">
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star"></i>
+									</div>
 								</div>
-							</div>
-						</article>
-					</a>
-					<a class="card-link" href="#">
-						<article class="card card-horizontal">
-							<picture class="card-thumbnail">
-								<img alt="Popular lodging photography"
-								     src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-								     srcset="images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg 2x" />
-							</picture>
-							<div class="card-container">
-								<span class="card-title">Hôtel Tout Bleu et Blanc</span>
-								<small>Nuit à partir de <b>68€</b></small>
-								<div class="rating">
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star"></i>
+							</article>
+						</a>
+						<a class="card-link" href="#">
+							<article class="card card-horizontal">
+								<picture class="card-thumbnail">
+									<img alt="Popular lodging photography"
+									     src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+									     srcset="images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg 2x" />
+								</picture>
+								<div class="card-container">
+									<span class="card-title">Hôtel Tout Bleu et Blanc</span>
+									<small>Nuit à partir de <b>68€</b></small>
+									<div class="rating">
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star"></i>
+									</div>
 								</div>
-							</div>
-						</article>
-					</a>
-				</div>
-			</section>
-			<section id="hebergements">
-				<h2>Hébergements à Marseille</h2>
-				<div id="lodging-cards">
-					<a class="card-link" href="#">
-						<article class="card">
-							<picture class="card-thumbnail">
-								<img alt="Photography of an hostel room at Auberge la Cannebière"
-								     src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-								     srcset="images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg 2x" />
-							</picture>
-							<div class="card-container">
-								<span class="card-title">Auberge la Cannebière</span>
-								<small>Nuit à partir de <b>25€</b></small>
-								<div class="rating">
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star"></i>
+							</article>
+						</a>
+					</div>
+				</section>
+				<section id="lodging">
+					<h2>Hébergements à Marseille</h2>
+					<div id="lodging-cards">
+						<a class="card-link" href="#">
+							<article class="card">
+								<picture class="card-thumbnail">
+									<img alt="Photography of an hostel room at Auberge la Cannebière"
+									     src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+									     srcset="images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg 2x" />
+								</picture>
+								<div class="card-container">
+									<span class="card-title">Auberge la Cannebière</span>
+									<small>Nuit à partir de <b>25€</b></small>
+									<div class="rating">
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star"></i>
+									</div>
 								</div>
-							</div>
-						</article>
-					</a>
-					<a class="card-link" href="#">
-						<article class="card">
-							<picture class="card-thumbnail">
-								<img alt="Photography of an hostel room at Hôtel du port"
-								     src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
-								     srcset="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg 2x" />
-							</picture>
-							<div class="card-container">
-								<span class="card-title">Hôtel du port</span>
-								<small>Nuit à partir de <b>52€</b></small>
-								<div class="rating">
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
+							</article>
+						</a>
+						<a class="card-link" href="#">
+							<article class="card">
+								<picture class="card-thumbnail">
+									<img alt="Photography of an hostel room at Hôtel du port"
+									     src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+									     srcset="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg 2x" />
+								</picture>
+								<div class="card-container">
+									<span class="card-title">Hôtel du port</span>
+									<small>Nuit à partir de <b>52€</b></small>
+									<div class="rating">
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+									</div>
 								</div>
-							</div>
-						</article>
-					</a>
-					<a class="card-link" href="#">
-						<article class="card">
-							<picture class="card-thumbnail">
-								<img alt="Photography of an hostel room at Hôtel Les mouettes"
-								     src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-								     srcset="images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg 2x" />
-							</picture>
-							<div class="card-container">
-								<span class="card-title">Hôtel Les mouettes</span>
-								<small>Nuit à partir de <b>76€</b></small>
-								<div class="rating">
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star"></i>
+							</article>
+						</a>
+						<a class="card-link" href="#">
+							<article class="card">
+								<picture class="card-thumbnail">
+									<img alt="Photography of an hostel room at Hôtel Les mouettes"
+									     src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+									     srcset="images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg 2x" />
+								</picture>
+								<div class="card-container">
+									<span class="card-title">Hôtel Les mouettes</span>
+									<small>Nuit à partir de <b>76€</b></small>
+									<div class="rating">
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star"></i>
+									</div>
 								</div>
-							</div>
-						</article>
-					</a>
-					<a class="card-link" href="#">
-						<article class="card">
-							<picture class="card-thumbnail">
-								<img alt="Photography of an hostel room at Hôtel de la mer"
-								     src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-								     srcset="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg 2x" />
-							</picture>
-							<div class="card-container">
-								<span class="card-title">Hôtel de la mer</span>
-								<small>Nuit à partir de <b>46€</b></small>
-								<div class="rating">
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
+							</article>
+						</a>
+						<a class="card-link" href="#">
+							<article class="card">
+								<picture class="card-thumbnail">
+									<img alt="Photography of an hostel room at Hôtel de la mer"
+									     src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+									     srcset="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg 2x" />
+								</picture>
+								<div class="card-container">
+									<span class="card-title">Hôtel de la mer</span>
+									<small>Nuit à partir de <b>46€</b></small>
+									<div class="rating">
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+									</div>
 								</div>
-							</div>
-						</article>
-					</a>
-					<a class="card-link" href="#">
-						<article class="card">
-							<picture class="card-thumbnail">
-								<img alt="Photography of an hostel room at Auberge Le Panier"
-								     src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
-								     srcset="images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 2x" />
-							</picture>
-							<div class="card-container">
-								<span class="card-title">Auberge Le Panier</span>
-								<small>Nuit à partir de <b>23€</b></small>
-								<div class="rating">
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star"></i>
+							</article>
+						</a>
+						<a class="card-link" href="#">
+							<article class="card">
+								<picture class="card-thumbnail">
+									<img alt="Photography of an hostel room at Auberge Le Panier"
+									     src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+									     srcset="images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 2x" />
+								</picture>
+								<div class="card-container">
+									<span class="card-title">Auberge Le Panier</span>
+									<small>Nuit à partir de <b>23€</b></small>
+									<div class="rating">
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star"></i>
+									</div>
 								</div>
-							</div>
-						</article>
-					</a>
-					<a class="card-link" href="#">
-						<article class="card">
-							<picture class="card-thumbnail">
-								<img alt="Photography of an hostel room at Hôtel chez Amina"
-								     src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-								     srcset="images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 2x" />
-							</picture>
-							<div class="card-container">
-								<span class="card-title">Hôtel chez Amina</span>
-								<small>Nuit à partir de <b>96€</b></small>
-								<div class="rating">
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
-									<i class="fa fa-star full"></i>
+							</article>
+						</a>
+						<a class="card-link" href="#">
+							<article class="card">
+								<picture class="card-thumbnail">
+									<img alt="Photography of an hostel room at Hôtel chez Amina"
+									     src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+									     srcset="images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 2x" />
+								</picture>
+								<div class="card-container">
+									<span class="card-title">Hôtel chez Amina</span>
+									<small>Nuit à partir de <b>96€</b></small>
+									<div class="rating">
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+										<i class="fa fa-star full"></i>
+									</div>
 								</div>
-							</div>
-						</article>
-					</a>
-				</div>
-				<a class="read-more-link" href="#">Afficher plus</a>
-			</section>
+							</article>
+						</a>
+					</div>
+					<a class="read-more-link" href="#">Afficher plus</a>
+				</section>
+			</div>
 			<section id="activites">
 				<h2>Activités à Marseille</h2>
 				<div id="cards-grid">
