fix: Fixed filters behaviour

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<section id="filters-section">
 				<h2>Filtres</h2>
 				<div class="filters-container">
-					<button class="filter" type="button">
+					<button class="filter active" type="button">
 						<span class="filter-icon">
 							<i class="fa fa-money-bill"></i>
 							<i class="fa cross-icon"></i>
