style: Fixed filters desktop display style: Replaced search button icon to text on desktop

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 					<input id="location_search" name="location_search" type="text" />
 					<button type="submit">
 						<i class="fa fa-search text-white"></i>
+						<span class="search-button-text">Rechercher</span>
 					</button>
 				</form>
 			</header>
