fix: Replacing span.card-title by h3.card-title in article tags

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 									     srcset="images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 2x" />
 								</picture>
 								<div class="card-container">
-									<span class="card-title">Hôtel Le soleil du matin</span>
+									<h3 class="card-title">Hôtel Le soleil du matin</h3>
 									<small>Nuit à partir de <b>128€</b></small>
 									<div class="rating">
 										<i class="fa fa-star full"></i>
@@ -133,7 +133,7 @@
 									     srcset="images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg 2x" />
 								</picture>
 								<div class="card-container">
-									<span class="card-title">Au cœur de l'eau Chambres d'hôtes</span>
+									<h3 class="card-title">Au cœur de l'eau Chambres d'hôtes</h3>
 									<small>Nuit à partir de <b>71€</b></small>
 									<div class="rating">
 										<i class="fa fa-star full"></i>
@@ -153,7 +153,7 @@
 									     srcset="images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg 2x" />
 								</picture>
 								<div class="card-container">
-									<span class="card-title">Hôtel Tout Bleu et Blanc</span>
+									<h3 class="card-title">Hôtel Tout Bleu et Blanc</h3>
 									<small>Nuit à partir de <b>68€</b></small>
 									<div class="rating">
 										<i class="fa fa-star full"></i>
@@ -178,7 +178,7 @@
 									     srcset="images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg 2x" />
 								</picture>
 								<div class="card-container">
-									<span class="card-title">Auberge la Cannebière</span>
+									<h3 class="card-title">Auberge la Cannebière</h3>
 									<small>Nuit à partir de <b>25€</b></small>
 									<div class="rating">
 										<i class="fa fa-star full"></i>
@@ -198,7 +198,7 @@
 									     srcset="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg 2x" />
 								</picture>
 								<div class="card-container">
-									<span class="card-title">Hôtel du port</span>
+									<h3 class="card-title">Hôtel du port</h3>
 									<small>Nuit à partir de <b>52€</b></small>
 									<div class="rating">
 										<i class="fa fa-star full"></i>
@@ -218,7 +218,7 @@
 									     srcset="images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg 2x" />
 								</picture>
 								<div class="card-container">
-									<span class="card-title">Hôtel Les mouettes</span>
+									<h3 class="card-title">Hôtel Les mouettes</h3>
 									<small>Nuit à partir de <b>76€</b></small>
 									<div class="rating">
 										<i class="fa fa-star full"></i>
@@ -238,7 +238,7 @@
 									     srcset="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg 2x" />
 								</picture>
 								<div class="card-container">
-									<span class="card-title">Hôtel de la mer</span>
+									<h3 class="card-title">Hôtel de la mer</h3>
 									<small>Nuit à partir de <b>46€</b></small>
 									<div class="rating">
 										<i class="fa fa-star full"></i>
@@ -258,7 +258,7 @@
 									     srcset="images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 2x" />
 								</picture>
 								<div class="card-container">
-									<span class="card-title">Auberge Le Panier</span>
+									<h3 class="card-title">Auberge Le Panier</h3>
 									<small>Nuit à partir de <b>23€</b></small>
 									<div class="rating">
 										<i class="fa fa-star full"></i>
@@ -278,7 +278,7 @@
 									     srcset="images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 2x" />
 								</picture>
 								<div class="card-container">
-									<span class="card-title">Hôtel chez Amina</span>
+									<h3 class="card-title">Hôtel chez Amina</h3>
 									<small>Nuit à partir de <b>96€</b></small>
 									<div class="rating">
 										<i class="fa fa-star full"></i>
@@ -305,7 +305,7 @@
 								     srcset="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 2x" />
 							</picture>
 							<div class="card-container">
-								<span class="card-title">Vieux Port</span>
+								<h3 class="card-title">Vieux Port</h3>
 							</div>
 						</article>
 					</a>
@@ -317,7 +317,7 @@
 								     srcset="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg 2x" />
 							</picture>
 							<div class="card-container">
-								<span class="card-title">Fort de Pomègues</span>
+								<h3 class="card-title">Fort de Pomègues</h3>
 							</div>
 						</article>
 					</a>
@@ -329,7 +329,7 @@
 								     srcset="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg 2x" />
 							</picture>
 							<div class="card-container">
-								<span class="card-title">Îles du Frioul</span>
+								<h3 class="card-title">Îles du Frioul</h3>
 							</div>
 						</article>
 					</a>
@@ -341,7 +341,7 @@
 								     srcset="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 2x" />
 							</picture>
 							<div class="card-container">
-								<span class="card-title">Parc National des Calanques</span>
+								<h3 class="card-title">Parc National des Calanques</h3>
 							</div>
 						</article>
 					</a>
@@ -353,7 +353,7 @@
 								     srcset="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg 2x" />
 							</picture>
 							<div class="card-container">
-								<span class="card-title">Notre-Dame-de-la-Garde</span>
+								<h3 class="card-title">Notre-Dame-de-la-Garde</h3>
 							</div>
 						</article>
 					</a>
@@ -365,7 +365,7 @@
 								     srcset="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg 2x" />
 							</picture>
 							<div class="card-container">
-								<span class="card-title">Parc Longchamp</span>
+								<h3 class="card-title">Parc Longchamp</h3>
 							</div>
 						</article>
 					</a>
